cors added to security filter, user id from keycloak uuid, display name